# midi_read

./: CMakeLists.txt  README.md  main.cpp
midi/: Metronome.cpp  Metronome.h  Midi.cpp  Midi.h  MidiEvent.cpp  MidiEvent.h  MidiTrack.cpp  MidiTrack.h  MidiTypes.h  MidiUtil.cpp  MidiUtil.h  Note.h
